# rv-simulation-interactive-battle-space

./: CMakeLists.txt  Doxyfile.in  INSTALL.txt  LICENSE  README.md  config.h.cmake  config.h.in  graphe_de_scene.txt  resources.cfg  variables.bat  variablesUser.bat  windowsSetPath.bat
cegui/looknfeel/: sleekspace.looknfeel
cegui/schemes/: SleekSpace.scheme
cmake/: FindBULLET.cmake  FindCEGUI.cmake  FindOGG.cmake  FindOGRE.cmake  FindOGREAL.cmake  FindOGREBULLET.cmake  FindOIS.cmake  FindOPENAL.cmake  FindPkgMacros.cmake  FindVORBIS.cmake  Function.cmake  UseDoxygen.cmake
dev_resources/: ROLES2.txt  Tache projet.ods  asteroid1.blend  asteroid2.blend
include/: Application.h  Asteroid.h  BattleStation.h  Camera.h  CameraAbstract.h  CameraExterieureFixe.h  CameraFirstPerson.h  CameraFixe.h  CameraFixeAbstract.h  CameraFixeTarget.h  CameraFixeTargetAbstract.h  CameraFree.h  CameraLibre.h  CameraThirdPerson.h  ClassRoot.h  Compteur.h  Fenetre.h  FirstPersCamera.h  GestGroupAsteroids.h  GestLaser.h  GestPlanet.h  GestSceneManager.h  GestShip.h  GestSound.h  GroupAsteroid.h  Laser.h  ListenerCollision.h  ListenerFrame.h  ListenerJoystick.h  ListenerKeyboard.h  ListenerMouse.h  ListenerTime.h  ListenerWindow.h  Menus.h  MeshLoader.h  MeshRoot.h  MeshType.h  Message.h  ObjectRoot.h  OrbitCamera.h  (+22 more)
media/materials/programs/: GroundFromSpace.program  PPL.program  PPL_Atmo.program  PerPixel.program  SkyFromSpace.program  explode.hlsl  explode.program
media/materials/scripts/: Dansphere.material  Daved.material  Earth.material  GroundFromSpace.material  HedeikiPetit.material  Heideki.material  Immense.material  JaugePleine.material  JaugeVide.material  LensFlare.material  Moon.material  PPL.material  PPL_Atmo.material  PerPixel.material  SkyFromSpace.material  SpaceDock2.material  asteroid.material  asteroid1.material  asteroid2.material  explosion.material  explosion.particle  laser.material  laser.particle  lightspeed.material  reactor.material  ship.material  ship2.material  skybox.material  sphere.material  sphere2.material  sphere3.material  sphere4.material  sphere5.material  sphere6.material  sphere7.material  sphere8.material  sphere9.material  sun.material  test.material
media/materials/shaders/: GroundFromSpace.hlsl  GroundFromSpacePS.glsl  GroundFromSpaceVS.glsl  PPL.cg  PPL_Atmo.cg  PerPixel.program  PerPixelPS.glsl  PerPixelPS.hlsl  PerPixelVS.glsl  PerPixelVS.hlsl  SkyFromSpace.hlsl  SkyFromSpacePS.glsl  SkyFromSpaceVS.glsl  explodePS.cg  explodePS.glsl  explodePS.hlsl  explodeVS.cg  explodeVS.glsl  explodeVS.hlsl  orangeshader.cg
media/materials/textures/: Licence textures.txt  Scene.material  Sphere.mesh.xml
media/models/: Dansphere.mesh  HedeikiPetit.mesh  Heideki.mesh  Scene.material  Sphere.mesh.xml  Stardock2.mesh  asteroid.mesh  asteroidLight.mesh  sphere.mesh
media/ogre/: Cube.mesh  Scene.material  boite_bas.mesh  boite_haut.mesh  fermeture.mesh  suzanne.mesh  suzanne.skeleton
src/: Application.cpp  Asteroid.cpp  BattleStation.cpp  CameraAbstract.cpp  CameraExterieureFixe.cpp  CameraFirstPerson.cpp  CameraFixe.cpp  CameraFixeAbstract.cpp  CameraFixeTarget.cpp  CameraFixeTargetAbstract.cpp  CameraFree.cpp  CameraLibre.cpp  CameraThirdPerson.cpp  Compteur.cpp  Fenetre.cpp  GestGroupAsteroids.cpp  GestLaser.cpp  GestPlanet.cpp  GestSceneManager.cpp  GestShip.cpp  GestSound.cpp  GroupAsteroid.cpp  Laser.cpp  ListenerCollision.cpp  ListenerFrame.cpp  ListenerJoystick.cpp  ListenerKeyboard.cpp  ListenerMouse.cpp  ListenerTime.cpp  ListenerWindow.cpp  Menus.cpp  MeshLoader.cpp  Message.cpp  ObjectRoot.cpp  OrbitCamera.cpp  Planet.cpp  PlayerControls.cpp  Ship.cpp  ShipAbstract.cpp  ShipIA.cpp  (+10 more)
trunk/: cmakeExec.bat
trunk/src/: main.cpp
txt_menus/: about.txt  scenario.txt  scenarioV2.txt
wiki/: Asteroids  DemoJeu  Executable  SonBinaural
